<resources>
    <string name="app_name" translatable="false">Tap To Go!</string>
    <string name="title_home">Inicio</string>
    <string name="title_history">Historial</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Home Screen -->
    <string name="game_instructions_home">
        Toca la pantalla para que el semáforo comience a iluminarse.\n
        Cuando las luces se apagen, toca de nuevo la pantalla para ver cuánto has tardado en reaccionar.\n
        ¡Buena suerte!
    </string>
    <string name="home_begin">TOCA LA PANTALLA PARA EMPEZAR</string>
    <string name="home_ready_set">PREPARADOS... LISTOS...</string>
    <string name="home_go">¡YA!</string>

    <string name="home_no_score">SIN RESULTADO</string>
    <string name="home_last_score">ÚLTIMO RESULTADO:</string>


    <!-- Preference Titles -->
    <string name="preferences_version_title">Versión instalada</string>
    <string name="preferences_version_summary" translatable="false">1.0.4 (#5) (Beta)</string>


    <!-- Preferences IDs -->
    <string name="preference_id_appstyle" translatable="false">appStyle</string>
    <string name="preference_id_secondduration" translatable="false">preferenceSecondDuration</string>
    <string name="preference_id_maxwait" translatable="false">preferenceMaxWaitingTime</string>
    <string name="preference_id_restore_game_settings" translatable="false">preferenceRestartGameSettings</string>
    <string name="preference_id_date_format" translatable="false">preferenceDateFormat</string>
    <string name="preference_id_game_mode" translatable="false">preferenceGameMode</string>

    <string name="preference_game_mode_one" translatable="false">gameMode_all_off</string>
    <string name="preference_game_mode_two" translatable="false">gameMode_last_on</string>

    <string name="preference_string_game_mode_one">Todas apagadas</string>
    <string name="preference_string_game_mode_two">Última encendida (verde)</string>



    <!-- History Screen -->
    <string name="details_waiting_time">Espera:</string>
    <string name="no_time_set_yet">Sin tiempos todavía</string>
    <string name="time_template" translatable="false">-.---</string>



    <string name="best_record">Mejor Tiempo</string>
    <string name="selected_record">Tiempo Seleccionado</string>

    <!-- Options menu -->
    <string name="clear_all_records">Eliminar registros</string>
    <string name="option_msg_clear_starts">¿Estás seguro de que quiere eliminar todos los registros? Esta acción no se puede deshacer</string>
    <string name="option_msg_clear_all">ELIMINAR DATOS</string>
    <string name="option_msg_cancel">CANCELAR</string>
    <string name="preference_summary_style">Cambiar los colores de la aplicación para que se vea más oscuro</string>
    <string name="preference_title_style">Modo oscuro</string>
    <string name="developed_by" translatable="false">Developed by MiguelRomeral</string>
    <string name="style">Estilo</string>
    <string name="about">Acerca de</string>
    <string name="game_settings">Ajustes del Juego</string>
    <string name="preference_max_wait_title">Máximo tiempo (en milisegundos) de espera hasta que las luces se apagen</string>
    <string name="preference_secondduration_title">Duración (en milisegundos) para que se encienda cada semáforo</string>
    <string name="preference_secondduration_summary">Tiempo por semáforo</string>
    <string name="preference_max_wait_summary">Tiempo de espera</string>
    <string name="preference_restart_game_settings">Establecer configuración por defecto</string>
    <string name="preference_restart_game_settings_summary">
        Establece los ajustes del juego a como eran cuando la instalaste. Esta acción no elimina tus datos actuales.</string>
    <string name="preference_date_format_title">Formato de fecha</string>

    <string name="preference_game_mode_settings_title">Protocolo de Cuenta Atrás</string>
    <string name="preference_game_mode_settings_summary">Establece cómo se deben encender las luces y cuándo se debe tocar la pantalla para obtener un resultado</string>


    <string name="set_custom">PERSONALIZADO</string>
    <string name="set_default">REESTABLECER</string>
    <string name="settings_set_default_game_title">Restablecer Configuración del Juego</string>
    <string name="settings_set_default_game_summary">
        ¿Quieres reestablecer la configuración del juego? Esta acción no tendrá efecto en tus datos actuales.</string>
    <string name="game_settings_changed_ok">¡Ajustes del juego asignados por defecto con éxito!</string>


    <string name="date_format_one" translatable="false">yyyy\/MM\/dd HH:mm:ss</string>
    <string name="date_format_two" translatable="false">dd\/MM\/yyyy HH:mm:ss</string>
    <string name="date_format_three" translatable="false">yyyy\/MM\/dd</string>
    <string name="date_format_four" translatable="false">dd\/MM\/yyyy</string>


    <string name="step_time">Paso:</string>
    <string name="max_wait_time_formatted">Máx. Esp:</string>
    <string name="content_description_recordslist">Lista en que los records son almacenados.</string>

</resources>
