<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <PreferenceCategory
            android:title="@string/game_settings">

                <SeekBarPreference
                    android:key="@string/preference_id_secondduration"
                    android:title="@string/preference_secondduration_summary"
                    android:summary="@string/preference_secondduration_title"
                    android:icon="@drawable/semaphore_red"
                    android:max="2500"
                    app:min="250"
                    android:defaultValue="1000" />

                <SeekBarPreference
                    android:key="@string/preference_id_maxwait"
                    android:title="@string/preference_max_wait_summary"
                    android:summary="@string/preference_max_wait_title"
                    android:icon="@drawable/semaphore_black"
                    android:max="5000"
                    app:min="300"
                    android:defaultValue="2500" />


                <Preference
                    android:key="@string/preference_id_restore_game_settings"
                    android:title="@string/preference_restart_game_settings"
                    android:summary="@string/preference_restart_game_settings_summary"
                    app:singleLineTitle="true" />

        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/style">

                <SwitchPreferenceCompat
                    android:key="@string/preference_id_appstyle"
                    android:title="@string/preference_title_style"
                    android:summary="@string/preference_summary_style"/>

        </PreferenceCategory>


        <PreferenceCategory
            android:title="@string/about">

        <Preference
            android:key="single_line_title"
            android:title="@string/preferences_version_title"
            android:summary="@string/preferences_version_summary"
            app:singleLineTitle="true" />

        </PreferenceCategory>

</PreferenceScreen>
